# rusty-llm

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bench.rs  convert.rs  dot.rs  float.rs  gpt2.rs  head.rs  lib.rs  linear.rs  llm.rs  main.rs  transformers.rs  utils.rs
src/nn/: block.rs  dot.rs  head.rs  layer_norm.rs  linear.rs  mod.rs  utils.rs
