[package]
name = "rusty-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = { version = "2.2.1", features = ["num-traits"] }
ndarray = { version = "0.15.6", git = "https://github.com/samsja/ndarray" , features = ["blas"]}
blas-src = { version = "0.9", features = ["openblas"] }
openblas-src = { version = "0.10.8", features = ["cblas", "system"] }
num-traits = "0.2.15"
safetensors = "0.3.0"
tokenizers = { version = "0.13.2", features = ["onig"] }

[profile.release]
lto = true # improve performance
